fix the gap between postBy and postsList

--- a/pages/blog/author/author.module.scss
+++ b/pages/blog/author/author.module.scss
@@ -97,7 +97,8 @@
 .postsBy {
   @include text-xl();
 
-  padding: 0 2rem 3rem;
+  margin: 0;
+  padding: 0 2rem 2rem;
 
   @include breakpoint(small) {
     padding: 0;
